Added debugging task for Nano config

--- a/nano_config.yml
+++ b/nano_config.yml
@@ -1,9 +1,5 @@
 ---
-- name: 'NANO CONFIG: Writing first line'
-  ansible.builtin.shell:
-    cmd: echo '{{ nano_config_options[0] }}' > $HOME/.nanorc
-    
-- name: 'NANO CONFIG: Writing middle lines'
+- name: 'NANO CONFIG: Writing to $HOME/.nanorc'
   ansible.builtin.shell:
     cmd: echo '{{ item }}' >> $HOME/.nanorc
-  loop: "{{ nano_config_options[1:] }}"
+  loop: "{{ nano_config_options }}"
