--- a/init.yml
+++ b/init.yml
@@ -98,25 +98,8 @@
     ansible.builtin.command:
       cmd: konsole -e 'bash install_VMM.sh "debian bullseye" apt'
       
-  #- name: Installing packages p2
-    #ansible.builtin.apt:
-      #name: gprolog{,-doc},htop,julia{,-doc},kate,k{mahjongg,nights,pat,sudoku}
-      #state: present
-      
-  #- name: Installing packages p3
-    #ansible.builtin.apt:
-      #name: libreoffice-{writer,calc,impress},make,nasm,neofetch,plank,ruby,plasma-browser-integration
-      #state: present
-      
-  #- name: Installing packages p4
-    #ansible.builtin.apt:
-      #name: python3-pip,racket{,-doc},screen,simplescreenrecorder,sl,texstudio,thefuck,thunderbird,tree
-      #state: present
-      
-  #- name: Installing packages p5
-    #ansible.builtin.apt:
-      #name: vinagre,vlc,zsh
-      #state: present
+  # TODO: Make list for aliases (currently, the only ones added are from visudo_edits.sh)
+  #- name: 
       
 # Play for user program configuations
 - name: Configuring user programs
@@ -172,11 +155,17 @@
 - name: Debugging stuff
   hosts: localhost
   connection: local
-  #become_user: chris
+  become_user: chris
   
   tasks:
   - name: 'DEBUGGING: Removing aliases file'
-    #become_user: chris
+    check_mode: off
     ansible.builtin.file:
-      name: /home/chris/.aliases
+      name: $HOME/.aliases
+      state: absent
+      
+  - name: 'DEBUGGING: Removing $HOME/.nanorc'
+    check_mode: off
+    ansible.builtin.file:
+      name: $HOME/.nanorc
       state: absent
