Changed from shell builtin to command builtin

--- a/nano_config.yml
+++ b/nano_config.yml
@@ -1,5 +1,5 @@
 ---
 - name: 'NANO CONFIG: Writing to {{ NANORC }}'
-  ansible.builtin.shell:
+  ansible.builtin.command:
     cmd: echo '{{ item }}' >> '{{ NANORC }}'
   loop: "{{ nano_config_options }}"
