--- a/aliases.yml
+++ b/aliases.yml
@@ -13,7 +13,8 @@ aliases: {
           'win64gcc': 'x86_64-w64-mingw32-gcc --static',    # for 64-bit Windows
           'win32g++': 'i686-w64-mingw32-g++ --static',      # for 32-bit Windows
           'win32gcc': 'i686-w64-mingw32-gcc --static',      # for 32-bit Windows
-          'arnoldc': 'bash $HOME/.local/bin/ArnoldC/run_arnoldc.sh'
+          'arnoldc': 'bash $HOME/.local/bin/ArnoldC/run_arnoldc.sh',
+          'ocaml-top': 'ocaml-top &'
          }
          
 aliases_redhat_distros: {
