--- a/quentier.yml
+++ b/quentier.yml
@@ -1,10 +1,37 @@
 ---
-- name: 'QUENTIER SETUP: Installing Quentier'
-  check_mode: on
-  ansible.builtin.command:
-    cmd: konsole -e 'bash install_quentier.sh "debian bullseye" apt'
+# SRC: https://software.opensuse.org//download.html?project=home%3Ad1vanov%3Aquentier-master&package=quentier-qt5
+- name: Quentier installation
+  hosts: localhost
+  connection: local
+  
+  tasks:
+  - name: 'QUENTIER: Adding Quentier repo (step 1)'
+    check_mode: on
+    ansible.builtin.command:
+      #cmd: konsole -e 'bash install_quentier.sh "debian bullseye" apt'
+      cmd: echo 'deb http://download.opensuse.org/repositories/home:/d1vanov:/quentier-master/Debian_11/ /' | sudo tee /etc/apt/sources.list.d/home:d1vanov:quentier-master.list
+      
+  - name: 'QUENTIER: Adding Quentier repo (step 2)'
+    check_mode: on
+    ansible.builtin.command:
+      cmd: curl -fsSL https://download.opensuse.org/repositories/home:d1vanov:quentier-master/Debian_11/Release.key | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/home_d1vanov_quentier-master.gpg > /dev/null
+    
+  # NOTE: On RPM-based distros, quentier is in the repos -> dnf install quentier
+  - name: 'QUENTIER: Installation'
+    block:
+      - name: 'QUENTIER: Installing Quentier'
+        check_mode: on
+        become: yes
+        ansible.builtin.apt:
+          name: quentier-qt5
+          state: present
+          update_cache: true
+    rescue:
+      - name: 'QUENTIER: Installation Failed'
+        ansible.builtin.debug:
+          msg: Package quentier-qt5 won't be available while testing
 
-- name: 'QUENTIER SETUP: Starting Quentier sync with Evernote'
-  check_mode: on
-  ansible.builtin.command:
-    cmd: konsole -e 'quentier &'
+  - name: 'QUENTIER: Starting Quentier sync with Evernote'
+    check_mode: on
+    ansible.builtin.command:
+      cmd: konsole -e 'quentier &'
