--- a/local.yml
+++ b/local.yml
@@ -1,12 +1,19 @@
 ---
-- name: Copying directories into {{ LOCAL }}
-  ansible.builtin.copy:
-    src: '{{ item }}'
-    dest: '{{ LOCAL }}'
-  loop: '{{ local_dirs }}'
+- name: Setting up local app environment
+  hosts: localhost
+  connection: local
+  vars_files:
+    - local_dirs.yml
   
-- name: Copying directories into {{ LOCAL }}/share
-  ansible.builtin.copy:
-    src: '{{ item }}'
-    dest: '{{ LOCAL }}/share'
-  loop: '{{ local_share_dirs }}'
+  tasks:
+  - name: Copying directories into {{ LOCAL }}
+    ansible.builtin.copy:
+      src: '{{ item }}'
+      dest: '{{ LOCAL }}'
+    loop: '{{ local_dirs }}'
+  
+  - name: Copying directories into {{ LOCAL }}/share
+    ansible.builtin.copy:
+      src: '{{ item }}'
+      dest: '{{ LOCAL }}/share'
+    loop: '{{ local_share_dirs }}'
